--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <output></output>
     </div>
     <!-- javascript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/6.6.4/math.js"></script>
     <script src="app.js"></script>
 </body>
 
